# Fantasia

./: .gitignore
ACM/1000/: 6889117_CE.cpp  6889126_AC_0MS_212K.cpp
ACM/1001/: 7114736_AC_0MS_152K.cpp
ACM/1002/: 7104058_WA.cpp  7104066_WA.c  7104069_WA.cpp  7104144_RE.cpp  7104147_AC_1172MS_5312K.cpp
ACM/1003/: 6938041_AC_0MS_212K.cpp
ACM/1004/: 6937893_AC_0MS_204K.cpp
ACM/1005/: 6938094_WA.cpp  6938149_AC_0MS_212K.cpp
ACM/1006/: 6895120_WA.cpp  6895240_RE.cpp  6895250_WA.cpp  6895282_WA.cpp  7105626_CE.cpp  7105632_CE.cpp  7105633_AC_766MS_216K.cpp
ACM/1007/: 7101515_CE.cpp  7101525_CE.cpp  7101528_AC_0MS_224K.cpp
ACM/1008/: 7101532_AC_0MS_232K.cpp
ACM/1011/: 7114820_RE.cpp
ACM/1012/: 7104063_TLE.cpp  7104065_AC_16MS_144K.c
ACM/1017/: 7373141_AC_47MS_704K.cc
ACM/1019/: 7196871_WA.cc  7196911_AC_0MS_384K.cc
ACM/1028/: 7114733_AC_16MS_212K.cpp
ACM/1163/: 7224019_AC_47MS_736K.cc
ACM/1247/: 7373147_CE.cc  7373150_AC_0MS_696K.cc
ACM/1269/: 7172194_AC_0MS_752K.cc
ACM/1298/: 7172435_WA.cc
ACM/1517/: 7177203_AC_16MS_704K.cc
ACM/1565/: 7177359_AC_0MS_736K.cc
ACM/1658/: 7177468_AC_0MS_732K.cc
ACM/1936/: 7119102_TLE.cpp  7119110_AC_79MS_844K.cc
ACM/2000/: 7181362_AC_0MS_728K.cc
ACM/2017/: 7115011_PE.cpp  7115015_AC_0MS_228K.cpp
ACM/2027/: 6946822_AC_0MS_204K.cpp
ACM/2039/: 7115557_AC_0MS_224K.cpp
ACM/2070/: 7181595_AC_0MS_740K.cc
ACM/2105/: 7119222_WA.cc  7119231_AC_0MS_716K.cc
ACM/2109/: 7119358_AC_0MS_768K.cc
ACM/2140/: 7183719_AC_157MS_724K.cc
ACM/2350/: 7224277_AC_125MS_728K.cc
ACM/2390/: 7183931_AC_16MS_724K.cc
ACM/2470/: 7224337_AC_266MS_1128K.cc
ACM/2521/: 7206060_AC_16MS_724K.cc
ACM/2551/: 7206012_AC_0MS_724K.cc
ACM/2578/: 7206069_AC_0MS_728K.cc
ACM/2583/: 7206023_AC_0MS_732K.cc
ACM/2636/: 7206055_AC_0MS_724K.cc
ACM/2656/: 7206039_WA.cc  7206049_AC_0MS_384K.cc
ACM/2665/: 7206032_AC_282MS_724K.cc
ACM/2685/: 7213251_AC_0MS_736K.cc
ACM/2696/: 7224304_AC_0MS_384K.cc
ACM/2707/: 7213211_WA.cpp  7213228_WA.cpp
ACM/2719/: 7213243_AC_157MS_716K.cc
ACM/2739/: 7134554_AC_0MS_724K.cc
ACM/2785/: 7224089_AC_3891MS_49432K.cc
ACM/2840/: 7213196_CE.cpp  7213208_AC_0MS_248K.cpp
ACM/2871/: 7213187_AC_16MS_756K.cc
ACM/2909/: 7291920_TLE.cc  7291981_AC_110MS_384K.cc
ACM/3006/: 7302815_TLE.cc  7302832_AC_32MS_1200K.cpp
ACM/3030/: 7302842_AC_0MS_696K.cc
ACM/3085/: 7302861_AC_16MS_708K.cc
ACM/3086/: 7302890_AC_16MS_704K.cc
ACM/3094/: 7302863_AC_0MS_700K.cc
ACM/3749/: 3749.cpp
ACM/3750/: 3750.c
ACM/3789/: 3789.c
ACM/3913/: 3913.c
ACM/3979/: 7900695_CE.cc  7900699_CE.cc  7900745_WA.cc  7903689_AC_0MS_368K.c
ACM/3980/: 7899996_TLE.cc  7900036_AC_391MS_368K.cc
ACM/3981/: 7900282_WA.cc  7900298_AC_0MS_688K.cc
ACM/3982/: 7904329_CE.cc  7904392_WA.cpp  7904475_WA.cpp  7907672_RE.cpp  7907702_AC_0MS_232K.cpp
OpenGL/imageprocess/: CMakeLists.txt  cmake.sh  test  test.cpp
OpenGL/imageprocess/document/: ClassDiagram.asta
OpenGL/imageprocess/include/: GreyImage.h  Image.h  ImageFactory.h  ImageType.h
OpenGL/imageprocess/src/: Image.cpp
OpenGL/openglbk/: CMakeLists.txt  aaindex.c  aargb.c  accanti.c  accpersp.c  alpha.c  alpha3D.c  bezcurve.c  bezmesh.c  bezsurf.c  blendeqn.c  checker.c  clip.c  colormat.c  colormatrix.c  colortable.c  combiner.c  convolution.c  cube.c  cubemap.c  dof.c  double.c  drawf.c  feedback.c  fog.c  fogcoord.c  fogindex.c  font.c  hello.c  histogram.c  image.c  jitter.h  light.c  lines.c  list.c  material.c  minmax.c  mipmap.c  model.c  movelight.c  (+34 more)
hack/: char_array.c  firstprog.c
